# lucentia

./: .gitignore  .roomodes  CLAUDE.md  LICENSE  README.md  biome.json  create-release.sh  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
.cursor/rules/: base.mdc  directory.mdc  release.mdc
.github/workflows/: release.yml  test.yml
app/: globals.css  layout.tsx  page.tsx
app/(app)/: layout.tsx  page.tsx
app/(app)/_components/: DownloadQueueItem.tsx  FormatPicker.tsx  StatsCard.tsx
app/(app)/downloads/: page.tsx
app/(app)/downloads/_components/: FileTableRow.tsx  FilterDropdown.tsx  SortDropdown.tsx
app/(app)/history/: page.tsx
app/(app)/settings/: page.tsx
app/setup/: page.tsx
components/: AppFooter.tsx  AppHeader.tsx  DialogSettingPath.tsx  Providers.tsx  Sidebar.tsx  VideoForm.tsx  dialog-setting-path.tsx
components/ui/: badge.tsx  dialog.tsx  select.tsx  sonner.tsx  switch.tsx
lib/: notifications.ts  utils.ts
lib/hooks/: useAppVersion.ts  useClickOutside.ts  useDownloadQueue.tsx  useDownloadedFiles.ts  useHistory.ts  useInitialization.tsx  useSettings.ts  useSetupProgress.ts  useVideoDownloader.ts
lib/i18n/: index.tsx  types.ts
lib/i18n/locales/: en.ts  ja.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  downloader.rs  history.rs  lib.rs  main.rs  settings.rs  utils.rs
types/: tauri.d.ts
