[package]
name = "lucentia"
version = "1.1.3"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lucentia_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0"
dirs = "4.0"
youtube_dl = { version = "0.10.0", features = [
    "tokio",
    "downloader-rustls-tls",
] }
tokio = { version = "1.32.0", features = ["full"] }
directories = "5.0.1"
regex = "1.9.5"
uuid = { version = "1.4.1", features = ["v4"] }
